# esp32-challenge

./: README.md
docs/: coding-standards.md
participants/FUFILIUS/stage-01/main/: CMakeLists.txt  rgb_led.c
participants/cutsover/stage-01/: README.md  sdkconfig.defaults  test-req.md
participants/cutsover/stage-01/main/: CMakeLists.txt  app_config.h  json_builder.h  led.c  led.h  monitor.c  mqtt_publisher.c
participants/fufilius/stage-01/: .gitignore  README.md  mosquitto-local.example.conf
participants/fufilius/stage-01/main/: dht22.c  main.c  mqtt_manager.c  network_events.c  rgb_led.c  sensor_store.h
participants/participant-cutsover/stage-01/: CMakeLists.txt  README.md
participants/participant-cutsover/stage-01/main/: app_config.h  bh1750_sensor.c  bh1750_sensor.h  dht_sensor.c  dht_sensor.h  fsm.c  fsm.h  json_builder.c  main.c  mqtt_publisher.c  mqtt_publisher.h  sensor_types.h  wifi_manager.c  wifi_manager.h
participants/participant-yohenson/stage-01/: README.md
participants/participant-yohenson/stage-01/main/: app_state.h  dht22.c  main.c  network_events.c  sensor_store.c  wifi_manager.c
stages/stage-01/: README.md  coding-standards.md  criteria.md  requirements.md
